--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@tanstack/react-table": "^8.21.2",
@@ -36,12 +39,13 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
-    "lucide-react": "^0.475.0",
+    "lucide-react": "^0.476.0",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.15.1",
     "server-only": "^0.0.1",
     "sonner": "^2.0.1",
     "superjson": "^2.2.1",
